nginx-demo/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
spec:
  selector:
    app: nginx-demo
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
