nginx-demo/dev/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-route
  namespace: demo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`demo.elpollo.de`)
      priority: 10
      services:
        - name: nginx-demo-service
          namespace: demo
          port: 80
          targetPort: 8080
  tls:
    secretName: demo-cert
